@@ -98,11 +98,7 @@
                 }
             });
         {% else %}
-            {% if LANGUAGE_CODE %}
-                window.location.href = '{% url "admin:login" %}?next=/{{ LANGUAGE_CODE }}/?{{ cms_edit_on }}';
-            {% else %}
-                window.location.href = '{% url "admin:login" %}?next=/?{{ cms_edit_on }}';
-            {% endif %}
+            window.location.href = '{% url "admin:login" %}?next={{ next_url }}?{{ cms_edit_on }}';
         {% endif %}
     </script>
     {% endlanguage %}
