@@ -13,6 +13,7 @@
   and public-only languages to anon users.
 * Introduced logic to copy pages to different sites from the admin.
 * Removed "View on Site" button when adding a page
+* Welcome page no longer uses multilingual URLs when not required.
 
 
 === 3.4.5 (2017-10-12) ===
